feat: configure OpenBLAS threads